[gd_scene load_steps=19 format=3 uid="uid://djaxaoe1t3rry"]

[ext_resource type="Script" path="res://objects/CameraAndCharacterSystems/First Person/player.gd" id="1_ffboj"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://objects/weapons/blaster-repeater.tres" id="2_6epbw"]
[ext_resource type="Script" path="res://scripts/weapon.gd" id="2_06mo8"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://assets/sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Resource" uid="uid://c56y8pqoyk15f" path="res://objects/weapons/blaster.tres" id="3_kr4p8"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://assets/sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="Resource" uid="uid://2au7og7v7uxp" path="res://objects/weapons/melee.tres" id="5_0iqdv"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://assets/audio/walking (2).ogg" id="5_ics1s"]
[ext_resource type="Resource" uid="uid://dtcfmhbrcshsx" path="res://objects/weapons/new-blaster.tres" id="5_mkhjn"]
[ext_resource type="ArrayMesh" uid="uid://kg1f8sp8p4fk" path="res://prefabs/cloud.res" id="7_qj3tn"]
[ext_resource type="PackedScene" uid="uid://dpmygvk0mwapm" path="res://addons/inventory-system/core/inventoryHandler.tscn" id="11_bkcfn"]
[ext_resource type="PackedScene" uid="uid://dgeqxc0243vkq" path="res://assets/models/Public Domain/KayKit/Kaykit-Adventurers/Base.glb" id="11_f23n2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lhhjj"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_k0bgd"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xipf3"]
height = 1.0
radius = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_oudxe"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_hgojc"]
size = Vector3(0.1, 0.1, 0.1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("muzzleRight", "muzzleLeft")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00740218, 0.510016, 0.00763416)
script = ExtResource("1_ffboj")
weapons = Array[ExtResource("2_06mo8")]([ExtResource("3_kr4p8"), ExtResource("2_6epbw"), ExtResource("5_mkhjn"), ExtResource("5_0iqdv")])
muzzleRight = NodePath("MuzzleRight")
muzzleLeft = NodePath("MuzzleLeft")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collision_mask = 3
collide_with_areas = true

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="SoundFootsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -5.0
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_lhhjj")
cast_shadow = 0
amount = 60
mesh = ExtResource("7_qj3tn")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_k0bgd")

[node name="InventoryHandler" parent="." instance=ExtResource("11_bkcfn")]

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 3

[node name="Collider" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CylinderShape3D_xipf3")

[node name="Body" parent="." instance=ExtResource("11_f23n2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1)

[node name="Spellbook" parent="Body/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999999, -3.80067e-07, -1.32199e-07, 4.78006e-07, 0.999999, -5.30967e-07, 2.10433e-07, 6.23449e-07, 0.999999, 0.883132, 1.04926, 0.265739)

[node name="2H_Staff" parent="Body/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.999999, 2.0298e-07, -4.52757e-07, -3.93247e-07, -6.76176e-07, -0.999999, -1.32203e-07, 0.999999, -6.23305e-07, -0.883132, 1.04926, -3.45664e-07)

[node name="HandRight" type="BoneAttachment3D" parent="Body/Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.999999, 4.68393e-07, 4.5731e-07, 3.978e-07, -5.88753e-07, 0.999999, 3.97616e-07, 0.999999, 5.35882e-07, -0.883132, 1.04926, -7.27595e-07)
bone_name = "handslot.r"
bone_idx = 15

[node name="Attachment" type="Node3D" parent="Body/Rig/Skeleton3D/HandRight"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/Rig/Skeleton3D/HandRight/Attachment"]
transform = Transform3D(-1, -5.68434e-14, -8.74228e-08, 5.68434e-14, 1, 5.68434e-14, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_oudxe")
skeleton = NodePath("../..")

[node name="HandLeft" type="BoneAttachment3D" parent="Body/Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.999999, -3.97612e-07, -3.67903e-07, -4.65843e-07, -5.30967e-07, 0.999999, -4.75847e-07, 0.999999, 6.23449e-07, 0.883132, 1.04926, -6.8115e-07)
bone_name = "handslot.l"
bone_idx = 8

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body/Rig/Skeleton3D/HandLeft"]
mesh = SubResource("BoxMesh_hgojc")

[node name="MuzzleRight" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00740218, 0.989984, -3.00763)
layers = 3
sprite_frames = ExtResource("4_m6ukc")
frame = 2
frame_progress = 1.0

[node name="MuzzleLeft" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00740218, 0.989984, -3.00763)
layers = 3
sprite_frames = ExtResource("4_m6ukc")
frame = 2
frame_progress = 1.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="Body"]
